# VideoKR

./: README.md
lmms_eval/: .env.example  .gitignore  README.md  pyproject.toml
lmms_eval/examples/models/: videokr_vllm.sh
lmms_eval/lmms_eval/: __main__.py  evaluator.py  protocol.py  utils.py
lmms_eval/lmms_eval/api/: task.py
lmms_eval/lmms_eval/caching/: cache.py
lmms_eval/lmms_eval/llm_judge/: base.py  factory.py
lmms_eval/lmms_eval/llm_judge/providers/: __init__.py  azure_openai.py  openai.py
lmms_eval/lmms_eval/loggers/: __init__.py
lmms_eval/lmms_eval/models/: __init__.py
lmms_eval/lmms_eval/models/chat/: vllm.py  vllm_generate.py
lmms_eval/lmms_eval/models/simple/: vllm.py
lmms_eval/lmms_eval/tasks/_task_utils/: judge_utils.py
lmms_eval/lmms_eval/tasks/longvideobench/: longvideobench_test_i.yaml  longvideobench_test_v.yaml  longvideobench_val_i.yaml  longvideobench_val_v.yaml  utils.py
lmms_eval/lmms_eval/tasks/mvbench/: _default_template_yaml  mvbench.yaml  mvbench_action_antonym.yaml  mvbench_action_count.yaml  mvbench_action_localization.yaml  mvbench_action_prediction.yaml  mvbench_action_sequence.yaml  mvbench_character_order.yaml  mvbench_counterfactual_inference.yaml  mvbench_egocentric_navigation.yaml  mvbench_episodic_reasoning.yaml  mvbench_fine_grained_action.yaml  mvbench_fine_grained_pose.yaml  mvbench_moving_attribute.yaml  mvbench_moving_count.yaml  mvbench_moving_direction.yaml  mvbench_object_existence.yaml  mvbench_object_interaction.yaml  mvbench_object_shuffle.yaml  mvbench_scene_transition.yaml  utils.py  (+2 more)
(+31 files in other folders)
