[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmms_eval"
version = "0.4.0"
authors = [
    { name = "VideoKR Team" },
]
description = "Focused lmms-eval subset for VideoKR video understanding evaluation"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.29.1",
    "datasets>=2.19.0",
    "decord; platform_system != 'Darwin'",
    "dill",
    "evaluate>=0.4.0",
    "eva-decord; platform_system == 'Darwin'",
    "huggingface_hub",
    "Jinja2",
    "loguru",
    "numpy>=1.26,<3",
    "openai",
    "opencv-python-headless",
    "pillow",
    "pydantic",
    "pytablewriter",
    "pytz",
    "pyyaml",
    "qwen-vl-utils>=0.0.14",
    "requests",
    "sacrebleu>=1.5.0",
    "sqlitedict==2.1.0",
    "tenacity>=8.3.0",
    "torch>=2.1.0",
    "tqdm",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["lmms_eval*"]
exclude = [
    "assets*",
    "dist*",
    "tests*",
    "checkpoints*",
    "outputs*",
    "logs*",
]

[project.scripts]
lmms-eval = "lmms_eval.__main__:cli_evaluate"
